# routingblocks-native-extension-example

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
example/: requirements.txt  usage.py
routingblocks_cvrp/: __init__.py
src/: CVRPEvaluation.cpp
tools/: README.md  stubgen.py
