[build-system]
requires = ["scikit-build-core>=0.2.1", "pybind11", "routingblocks"]
build-backend = "scikit_build_core.build"


[project]
name = "RoutingBlocks-CVRP"
version = "0.1.2"
description = "Native CVRP evaluation for the routingblocks package"
readme = "README.md"
authors = [
    { name = "Patrick Sean Klein", email = "patrick.sean.klein@tum.de" },
]
dependencies = [
    "routingblocks"
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true

[tool.cibuildwheel]
build = ["cp*-manylinux_x86_64", "cp*-win32", "cp*-win_amd64", "cp*-macosx_*"]
build-verbosity = 1
